rename classes & fix alignment & closeAfter bugs

--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,22 +1,24 @@
 .uvc-menu {
-  position: absolute;
+  display: block;
+  position: relative;
   width: fit-content;
   height: fit-content;
-  z-index: 10;
-
-  opacity: 0;
-  visibility: hidden;
-  transition: .2s ease-in-out;
 
   &_wrapper {
-    position: relative;
+    display: block;
+    position: absolute;
     width: fit-content;
     height: fit-content;
+    z-index: 10;
+
+    opacity: 0;
+    visibility: hidden;
+    transition: .2s ease-in-out;
   }
 
   &_trigger {
+    display: block;
     position: relative;
-    z-index: 3;
     width: fit-content;
     height: fit-content;
   }
